# ConvertFile2RAG

./: .cursorrules  .gitignore  README.md  main.py  pyproject.toml  test_mineru_util.py
modes/RAGAnything/: README.md  __init__.py  __main__.py  example_usage.py  install_dependencies.py  test_advanced_functionality.py  test_basic_functionality.py  test_specific_document.py
modes/Unstructured/: test_ Unstructured.py  test_mineru.py
modes/imageTool/: image_service.py  test_image_service.py
modes/mineru/: README.md  STANDARDIZATION_SUMMARY.md  mineru_util.py  test_mineru_util.py
modes/ocrTool/: config.yaml  ocr_service.py  test_ocr_service.py
modes/pdfConverter/: pdf_service.py  test_pdf_service.py
modules/pdfConverter/: pdf_service.py
script/: cli.py  data_struct.md
workflow/: split_workflow.py  test_split_workflow.py
