[project]
name = "convertfile2rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=12.0.0",
    "pymupdf>=1.26.6",
    "rapidocr-onnxruntime>=1.4.4",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
