[project]
name = "convertfile2rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mineru[core]",
    "mlx>=0.30.0",
    "mlx-lm>=0.28.4",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.12.0.88",
    "pdfminer-six==20250506",
    "pillow>=12.0.0",
    "pillow-heif>=1.1.1",
    "pymupdf>=1.26.6",
    "rapidocr>=3.4.2",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
[tool.ruff]
line-length = 120  # 代码最大行宽

[tool.ruff.lint]
select = [         # 选择的规则
    "F",
    "E",
    "W",
    "UP",
]
ignore = ["F401"]  # 忽略的规则
